// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Newsletters API Can add a newsletter - and subscribe existing members 1: [body] 1`] = `
Object {
  "meta": Object {
    "opted_in_member_count": 6,
  },
  "newsletters": Array [
    Object {
      "body_font_category": "serif",
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "description": null,
      "footer_content": null,
      "header_image": null,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "name": "New newsletter with existing members subscribed",
      "sender_email": null,
      "sender_name": "Test",
      "sender_reply_to": "newsletter",
      "show_badge": true,
      "show_feature_image": true,
      "show_header_icon": true,
      "show_header_name": true,
      "show_header_title": true,
      "slug": "new-newsletter-with-existing-members-subscribed",
      "sort_order": 7,
      "status": "active",
      "subscribe_on_signup": true,
      "title_alignment": "center",
      "title_font_category": "serif",
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      "visibility": "members",
    },
  ],
}
`;

exports[`Newsletters API Can add a newsletter - and subscribe existing members 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "745",
  "content-type": "application/json; charset=utf-8",
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "location": StringMatching /https\\?:\\\\/\\\\/\\.\\*\\?\\\\/newsletters\\\\/\\[a-f0-9\\]\\{24\\}\\\\//,
  "vary": "Origin, Accept-Encoding",
  "x-cache-invalidate": "/*",
  "x-powered-by": "Express",
}
`;

exports[`Newsletters API Can add a newsletter - with custom sender_email 1: [body] 1`] = `
Object {
  "meta": Object {
    "sent_email_verification": Array [
      "sender_email",
    ],
  },
  "newsletters": Array [
    Object {
      "body_font_category": "serif",
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "description": null,
      "footer_content": null,
      "header_image": null,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "name": "My test newsletter with custom sender_email",
      "sender_email": null,
      "sender_name": "Test",
      "sender_reply_to": "newsletter",
      "show_badge": true,
      "show_feature_image": true,
      "show_header_icon": true,
      "show_header_name": true,
      "show_header_title": true,
      "slug": "my-test-newsletter-with-custom-sender_email",
      "sort_order": 6,
      "status": "active",
      "subscribe_on_signup": true,
      "title_alignment": "center",
      "title_font_category": "serif",
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      "visibility": "members",
    },
  ],
}
`;

exports[`Newsletters API Can add a newsletter - with custom sender_email 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "754",
  "content-type": "application/json; charset=utf-8",
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "location": StringMatching /https\\?:\\\\/\\\\/\\.\\*\\?\\\\/newsletters\\\\/\\[a-f0-9\\]\\{24\\}\\\\//,
  "vary": "Origin, Accept-Encoding",
  "x-cache-invalidate": "/*",
  "x-powered-by": "Express",
}
`;

exports[`Newsletters API Can add a newsletter - with custom sender_email and subscribe existing members 1: [body] 1`] = `
Object {
  "meta": Object {
    "opted_in_member_count": 6,
    "sent_email_verification": Array [
      "sender_email",
    ],
  },
  "newsletters": Array [
    Object {
      "body_font_category": "serif",
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "description": null,
      "footer_content": null,
      "header_image": null,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "name": "My test newsletter with custom sender_email and subscribe existing",
      "sender_email": null,
      "sender_name": "Test",
      "sender_reply_to": "newsletter",
      "show_badge": true,
      "show_feature_image": true,
      "show_header_icon": true,
      "show_header_name": true,
      "show_header_title": true,
      "slug": "my-test-newsletter-with-custom-sender_email-and-subscribe-existing",
      "sort_order": 8,
      "status": "active",
      "subscribe_on_signup": true,
      "title_alignment": "center",
      "title_font_category": "serif",
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      "visibility": "members",
    },
  ],
}
`;

exports[`Newsletters API Can add a newsletter - with custom sender_email and subscribe existing members 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "826",
  "content-type": "application/json; charset=utf-8",
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "location": StringMatching /https\\?:\\\\/\\\\/\\.\\*\\?\\\\/newsletters\\\\/\\[a-f0-9\\]\\{24\\}\\\\//,
  "vary": "Origin, Accept-Encoding",
  "x-cache-invalidate": "/*",
  "x-powered-by": "Express",
}
`;

exports[`Newsletters API Can add a newsletter - with custom sender_email and subscribe exsiting members 1: [body] 1`] = `
Object {
  "meta": Object {
    "opted_in_member_count": 6,
    "sent_email_verification": Array [
      "sender_email",
    ],
  },
  "newsletters": Array [
    Object {
      "body_font_category": "serif",
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "description": null,
      "footer_content": null,
      "header_image": null,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "name": "My test newsletter with custom sender_email and subscribe existing",
      "sender_email": null,
      "sender_name": "Test",
      "sender_reply_to": "newsletter",
      "show_badge": true,
      "show_feature_image": true,
      "show_header_icon": true,
      "show_header_name": true,
      "show_header_title": true,
      "slug": "my-test-newsletter-with-custom-sender_email-and-subscribe-existing",
      "sort_order": 6,
      "status": "active",
      "subscribe_on_signup": true,
      "title_alignment": "center",
      "title_font_category": "serif",
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "visibility": "members",
    },
  ],
}
`;

exports[`Newsletters API Can add a newsletter - with custom sender_email and subscribe exsiting members 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "780",
  "content-type": "application/json; charset=utf-8",
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "location": StringMatching /https\\?:\\\\/\\\\/\\.\\*\\?\\\\/newsletters\\\\/\\[a-f0-9\\]\\{24\\}\\\\//,
  "vary": "Origin, Accept-Encoding",
  "x-cache-invalidate": "/*",
  "x-powered-by": "Express",
}
`;

exports[`Newsletters API Can add a newsletter 1: [body] 1`] = `
Object {
  "newsletters": Array [
    Object {
      "body_font_category": "serif",
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "description": null,
      "footer_content": null,
      "header_image": null,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "name": "My test newsletter",
      "sender_email": null,
      "sender_name": "Test",
      "sender_reply_to": "newsletter",
      "show_badge": true,
      "show_feature_image": true,
      "show_header_icon": true,
      "show_header_name": true,
      "show_header_title": true,
      "slug": "my-test-newsletter",
      "sort_order": 3,
      "status": "active",
      "subscribe_on_signup": true,
      "title_alignment": "center",
      "title_font_category": "serif",
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      "visibility": "members",
    },
  ],
}
`;

exports[`Newsletters API Can add a newsletter 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "652",
  "content-type": "application/json; charset=utf-8",
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "location": StringMatching /https\\?:\\\\/\\\\/\\.\\*\\?\\\\/newsletters\\\\/\\[a-f0-9\\]\\{24\\}\\\\//,
  "vary": "Origin, Accept-Encoding",
  "x-cache-invalidate": "/*",
  "x-powered-by": "Express",
}
`;

exports[`Newsletters API Can add multiple newsletters 1: [body] 1`] = `
Object {
  "newsletters": Array [
    Object {
      "body_font_category": "sans_serif",
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "description": null,
      "footer_content": null,
      "header_image": null,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "name": "My first test newsletter",
      "sender_email": null,
      "sender_name": null,
      "sender_reply_to": "newsletter",
      "show_badge": true,
      "show_feature_image": true,
      "show_header_icon": true,
      "show_header_name": true,
      "show_header_title": true,
      "slug": "my-first-test-newsletter",
      "sort_order": 4,
      "status": "active",
      "subscribe_on_signup": true,
      "title_alignment": "center",
      "title_font_category": "sans_serif",
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      "visibility": "members",
    },
  ],
}
`;

exports[`Newsletters API Can add multiple newsletters 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "672",
  "content-type": "application/json; charset=utf-8",
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "location": StringMatching /https\\?:\\\\/\\\\/\\.\\*\\?\\\\/newsletters\\\\/\\[a-f0-9\\]\\{24\\}\\\\//,
  "vary": "Origin, Accept-Encoding",
  "x-cache-invalidate": "/*",
  "x-powered-by": "Express",
}
`;

exports[`Newsletters API Can add multiple newsletters 3: [body] 1`] = `
Object {
  "newsletters": Array [
    Object {
      "body_font_category": "sans_serif",
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "description": null,
      "footer_content": null,
      "header_image": null,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "name": "My second test newsletter",
      "sender_email": null,
      "sender_name": null,
      "sender_reply_to": "newsletter",
      "show_badge": true,
      "show_feature_image": true,
      "show_header_icon": true,
      "show_header_name": true,
      "show_header_title": true,
      "slug": "my-second-test-newsletter",
      "sort_order": 5,
      "status": "active",
      "subscribe_on_signup": true,
      "title_alignment": "center",
      "title_font_category": "sans_serif",
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      "visibility": "members",
    },
  ],
}
`;

exports[`Newsletters API Can add multiple newsletters 4: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "674",
  "content-type": "application/json; charset=utf-8",
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "location": StringMatching /https\\?:\\\\/\\\\/\\.\\*\\?\\\\/newsletters\\\\/\\[a-f0-9\\]\\{24\\}\\\\//,
  "vary": "Origin, Accept-Encoding",
  "x-cache-invalidate": "/*",
  "x-powered-by": "Express",
}
`;

exports[`Newsletters API Can browse newsletters 1: [body] 1`] = `
Object {
  "meta": Object {
    "pagination": Object {
      "limit": 15,
      "next": null,
      "page": 1,
      "pages": 1,
      "prev": null,
      "total": 4,
    },
  },
  "newsletters": Array [
    Object {
      "body_font_category": "sans_serif",
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "description": null,
      "footer_content": null,
      "header_image": null,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "name": "Default Newsletter",
      "sender_email": null,
      "sender_name": null,
      "sender_reply_to": "newsletter",
      "show_badge": true,
      "show_feature_image": true,
      "show_header_icon": true,
      "show_header_name": true,
      "show_header_title": true,
      "slug": "default-newsletter",
      "sort_order": 0,
      "status": "active",
      "subscribe_on_signup": true,
      "title_alignment": "center",
      "title_font_category": "sans_serif",
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      "visibility": "members",
    },
    Object {
      "body_font_category": "serif",
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "description": null,
      "footer_content": null,
      "header_image": null,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "name": "Daily newsletter",
      "sender_email": "jamie@example.com",
      "sender_name": "Jamie",
      "sender_reply_to": "newsletter",
      "show_badge": true,
      "show_feature_image": true,
      "show_header_icon": true,
      "show_header_name": true,
      "show_header_title": true,
      "slug": "daily-newsletter",
      "sort_order": 1,
      "status": "active",
      "subscribe_on_signup": false,
      "title_alignment": "center",
      "title_font_category": "serif",
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      "visibility": "members",
    },
    Object {
      "body_font_category": "serif",
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "description": null,
      "footer_content": null,
      "header_image": null,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "name": "Weekly newsletter",
      "sender_email": "jamie@example.com",
      "sender_name": "Jamie",
      "sender_reply_to": "newsletter",
      "show_badge": true,
      "show_feature_image": true,
      "show_header_icon": true,
      "show_header_name": true,
      "show_header_title": true,
      "slug": "weekly-newsletter",
      "sort_order": 2,
      "status": "active",
      "subscribe_on_signup": true,
      "title_alignment": "center",
      "title_font_category": "serif",
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      "visibility": "members",
    },
    Object {
      "body_font_category": "serif",
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "description": null,
      "footer_content": null,
      "header_image": null,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "name": "Old newsletter",
      "sender_email": "jamie@example.com",
      "sender_name": "Jamie",
      "sender_reply_to": "newsletter",
      "show_badge": true,
      "show_feature_image": true,
      "show_header_icon": true,
      "show_header_name": true,
      "show_header_title": true,
      "slug": "old-newsletter",
      "sort_order": 2,
      "status": "archived",
      "subscribe_on_signup": true,
      "title_alignment": "center",
      "title_font_category": "serif",
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      "visibility": "members",
    },
  ],
}
`;

exports[`Newsletters API Can browse newsletters 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "2690",
  "content-type": "application/json; charset=utf-8",
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Newsletters API Can edit a newsletters and update the sender_email when already set 1: [body] 1`] = `
Object {
  "meta": Object {
    "sent_email_verification": Array [
      "sender_email",
    ],
  },
  "newsletters": Array [
    Object {
      "body_font_category": "serif",
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "description": null,
      "footer_content": null,
      "header_image": null,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "name": "Updated newsletter name",
      "sender_email": "jamie@example.com",
      "sender_name": "Jamie",
      "sender_reply_to": "newsletter",
      "show_badge": true,
      "show_feature_image": true,
      "show_header_icon": true,
      "show_header_name": true,
      "show_header_title": true,
      "slug": "daily-newsletter",
      "sort_order": 1,
      "status": "active",
      "subscribe_on_signup": false,
      "title_alignment": "center",
      "title_font_category": "serif",
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      "visibility": "members",
    },
  ],
}
`;

exports[`Newsletters API Can edit a newsletters and update the sender_email when already set 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "724",
  "content-type": "application/json; charset=utf-8",
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Origin, Accept-Encoding",
  "x-cache-invalidate": "/*",
  "x-powered-by": "Express",
}
`;

exports[`Newsletters API Can edit newsletters 1: [body] 1`] = `
Object {
  "newsletters": Array [
    Object {
      "body_font_category": "serif",
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "description": null,
      "footer_content": null,
      "header_image": null,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "name": "Updated newsletter name",
      "sender_email": "jamie@example.com",
      "sender_name": "Jamie",
      "sender_reply_to": "newsletter",
      "show_badge": true,
      "show_feature_image": true,
      "show_header_icon": true,
      "show_header_name": true,
      "show_header_title": true,
      "slug": "daily-newsletter",
      "sort_order": 1,
      "status": "active",
      "subscribe_on_signup": false,
      "title_alignment": "center",
      "title_font_category": "serif",
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      "visibility": "members",
    },
  ],
}
`;

exports[`Newsletters API Can edit newsletters 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "672",
  "content-type": "application/json; charset=utf-8",
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Origin, Accept-Encoding",
  "x-cache-invalidate": "/*",
  "x-powered-by": "Express",
}
`;

exports[`Newsletters API Can include members & posts counts when browsing newsletters 1: [body] 1`] = `
Object {
  "meta": Object {
    "pagination": Object {
      "limit": 15,
      "next": null,
      "page": 1,
      "pages": 1,
      "prev": null,
      "total": 4,
    },
  },
  "newsletters": Array [
    Object {
      "body_font_category": "sans_serif",
      "count": Object {
        "members": 0,
        "posts": 0,
      },
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "description": null,
      "footer_content": null,
      "header_image": null,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "name": "Default Newsletter",
      "sender_email": null,
      "sender_name": null,
      "sender_reply_to": "newsletter",
      "show_badge": true,
      "show_feature_image": true,
      "show_header_icon": true,
      "show_header_name": true,
      "show_header_title": true,
      "slug": "default-newsletter",
      "sort_order": 0,
      "status": "active",
      "subscribe_on_signup": true,
      "title_alignment": "center",
      "title_font_category": "sans_serif",
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      "visibility": "members",
    },
    Object {
      "body_font_category": "serif",
      "count": Object {
        "members": 4,
        "posts": 0,
      },
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "description": null,
      "footer_content": null,
      "header_image": null,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "name": "Daily newsletter",
      "sender_email": "jamie@example.com",
      "sender_name": "Jamie",
      "sender_reply_to": "newsletter",
      "show_badge": true,
      "show_feature_image": true,
      "show_header_icon": true,
      "show_header_name": true,
      "show_header_title": true,
      "slug": "daily-newsletter",
      "sort_order": 1,
      "status": "active",
      "subscribe_on_signup": false,
      "title_alignment": "center",
      "title_font_category": "serif",
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      "visibility": "members",
    },
    Object {
      "body_font_category": "serif",
      "count": Object {
        "members": 3,
        "posts": 0,
      },
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "description": null,
      "footer_content": null,
      "header_image": null,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "name": "Weekly newsletter",
      "sender_email": "jamie@example.com",
      "sender_name": "Jamie",
      "sender_reply_to": "newsletter",
      "show_badge": true,
      "show_feature_image": true,
      "show_header_icon": true,
      "show_header_name": true,
      "show_header_title": true,
      "slug": "weekly-newsletter",
      "sort_order": 2,
      "status": "active",
      "subscribe_on_signup": true,
      "title_alignment": "center",
      "title_font_category": "serif",
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      "visibility": "members",
    },
    Object {
      "body_font_category": "serif",
      "count": Object {
        "members": 2,
        "posts": 0,
      },
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "description": null,
      "footer_content": null,
      "header_image": null,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "name": "Old newsletter",
      "sender_email": "jamie@example.com",
      "sender_name": "Jamie",
      "sender_reply_to": "newsletter",
      "show_badge": true,
      "show_feature_image": true,
      "show_header_icon": true,
      "show_header_name": true,
      "show_header_title": true,
      "slug": "old-newsletter",
      "sort_order": 2,
      "status": "archived",
      "subscribe_on_signup": true,
      "title_alignment": "center",
      "title_font_category": "serif",
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      "visibility": "members",
    },
  ],
}
`;

exports[`Newsletters API Can include members & posts counts when browsing newsletters 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "2818",
  "content-type": "application/json; charset=utf-8",
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Newsletters API Can include members & posts counts when reading a newsletter 1: [body] 1`] = `
Object {
  "newsletters": Array [
    Object {
      "body_font_category": "serif",
      "count": Object {
        "members": 4,
        "posts": 0,
      },
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "description": null,
      "footer_content": null,
      "header_image": null,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "name": "Daily newsletter",
      "sender_email": "jamie@example.com",
      "sender_name": "Jamie",
      "sender_reply_to": "newsletter",
      "show_badge": true,
      "show_feature_image": true,
      "show_header_icon": true,
      "show_header_name": true,
      "show_header_title": true,
      "slug": "daily-newsletter",
      "sort_order": 1,
      "status": "active",
      "subscribe_on_signup": false,
      "title_alignment": "center",
      "title_font_category": "serif",
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      "visibility": "members",
    },
  ],
}
`;

exports[`Newsletters API Can include members & posts counts when reading a newsletter 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "697",
  "content-type": "application/json; charset=utf-8",
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Newsletters API Can read a newsletter 1: [body] 1`] = `
Object {
  "newsletters": Array [
    Object {
      "body_font_category": "serif",
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "description": null,
      "footer_content": null,
      "header_image": null,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "name": "Daily newsletter",
      "sender_email": "jamie@example.com",
      "sender_name": "Jamie",
      "sender_reply_to": "newsletter",
      "show_badge": true,
      "show_feature_image": true,
      "show_header_icon": true,
      "show_header_name": true,
      "show_header_title": true,
      "slug": "daily-newsletter",
      "sort_order": 1,
      "status": "active",
      "subscribe_on_signup": false,
      "title_alignment": "center",
      "title_font_category": "serif",
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      "visibility": "members",
    },
  ],
}
`;

exports[`Newsletters API Can read a newsletter 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "665",
  "content-type": "application/json; charset=utf-8",
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Newsletters API Can verify property updates 1: [body] 1`] = `
Object {
  "newsletters": Array [
    Object {
      "body_font_category": "serif",
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "description": null,
      "footer_content": null,
      "header_image": null,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "name": "Updated newsletter name",
      "sender_email": "verify@example.com",
      "sender_name": "Jamie",
      "sender_reply_to": "newsletter",
      "show_badge": true,
      "show_feature_image": true,
      "show_header_icon": true,
      "show_header_name": true,
      "show_header_title": true,
      "slug": "daily-newsletter",
      "sort_order": 1,
      "status": "active",
      "subscribe_on_signup": false,
      "title_alignment": "center",
      "title_font_category": "serif",
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      "visibility": "members",
    },
  ],
}
`;

exports[`Newsletters API Can't add multiple newsletters with same name 1: [body] 1`] = `
Object {
  "newsletters": Array [
    Object {
      "body_font_category": "sans_serif",
      "created_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "description": null,
      "footer_content": null,
      "header_image": null,
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "name": "Duplicate newsletter",
      "sender_email": null,
      "sender_name": null,
      "sender_reply_to": "newsletter",
      "show_badge": true,
      "show_feature_image": true,
      "show_header_icon": true,
      "show_header_name": true,
      "show_header_title": true,
      "slug": "duplicate-newsletter",
      "sort_order": Any<Number>,
      "status": "active",
      "subscribe_on_signup": true,
      "title_alignment": "center",
      "title_font_category": "sans_serif",
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000Z/,
      "uuid": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      "visibility": "members",
    },
  ],
}
`;

exports[`Newsletters API Can't add multiple newsletters with same name 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "664",
  "content-type": "application/json; charset=utf-8",
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "location": StringMatching /https\\?:\\\\/\\\\/\\.\\*\\?\\\\/newsletters\\\\/\\[a-f0-9\\]\\{24\\}\\\\//,
  "vary": "Origin, Accept-Encoding",
  "x-cache-invalidate": "/*",
  "x-powered-by": "Express",
}
`;

exports[`Newsletters API Can't add multiple newsletters with same name 3: [body] 1`] = `
Object {
  "errors": Array [
    Object {
      "code": null,
      "context": "A newsletter with the same name already exists",
      "details": null,
      "help": null,
      "id": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      "message": "Validation error, cannot save newsletter.",
      "property": null,
      "type": "ValidationError",
    },
  ],
}
`;

exports[`Newsletters API Can't add multiple newsletters with same name 4: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "251",
  "content-type": "application/json; charset=utf-8",
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Newsletters API Can't edit multiple newsletters to existing name 1: [body] 1`] = `
Object {
  "errors": Array [
    Object {
      "code": null,
      "context": "A newsletter with the same name already exists",
      "details": null,
      "help": null,
      "id": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      "message": "Validation error, cannot edit newsletter.",
      "property": null,
      "type": "ValidationError",
    },
  ],
}
`;

exports[`Newsletters API Can't edit multiple newsletters to existing name 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "http://127.0.0.1:2369",
  "cache-control": "no-cache, private, no-store, must-revalidate, max-stale=0, post-check=0, pre-check=0",
  "content-length": "251",
  "content-type": "application/json; charset=utf-8",
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Origin, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Newsletters API Host Settings: newsletter limits Request fails when newsletter limit is in place 1: [body] 1`] = `
Object {
  "errors": Array [
    Object {
      "code": null,
      "context": "Nuh uh",
      "details": Object {
        "name": "newsletters",
      },
      "help": "https://ghost.org/help/",
      "id": StringMatching /\\[a-f0-9\\]\\{8\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{4\\}-\\[a-f0-9\\]\\{12\\}/,
      "message": "Host Limit error, cannot save newsletter.",
      "property": null,
      "type": "HostLimitError",
    },
  ],
}
`;
